--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,4 +1,4 @@
-<mat-card>
+<mat-card class="mat-elevation-z8">
   <span>REGISTRAR NUEVO USUARIO</span>
   <br>
   <!--onSubmit acer referencia anuestro token atraes de un metodo (ngSubmit)='onSubmit()'-->
