--- a/src/app/layoutAdmin/components/headera/headera.component.html
+++ b/src/app/layoutAdmin/components/headera/headera.component.html
@@ -25,7 +25,7 @@
             <mat-menu #menu="matMenu">
               <button mat-menu-item>
                 <mat-icon>exit_to_app</mat-icon>
-                Logout
+                <a mat-raised-button href="/">logout</a>
               </button>
             </mat-menu>
           </li>
