--- a/src/app/layoutAdmin/components/sidenava/sidenava.component.html
+++ b/src/app/layoutAdmin/components/sidenava/sidenava.component.html
@@ -5,7 +5,7 @@
     <mat-divider></mat-divider>
     <h2 matSubheader class="mt-2">APPLICATIONS</h2>
 
-    <a mat-list-item routerLinkActive="/dashboard" routerLink="/dashboard">
+    <a mat-list-item routerLinkActive="/dashboard" href="/layout/dashboard"   routerLink="/dashboard">
       <mat-icon>dashboard</mat-icon> Dashboard
     </a>
 
@@ -13,7 +13,7 @@
       <mat-icon>assignment_ind</mat-icon> <span class="nav-caption">Services</span>
   </a>  -->
 
-    <a mat-list-item  routerLinkActive="list-item-active" routerLink="/register">
+    <a mat-list-item  routerLinkActive="list-item-active" href="/layout/register" routerLink="/register">
 
      <mat-icon>edit</mat-icon> Regiser User </a>
     <a mat-list-item> <mat-icon>edit</mat-icon> Link 4 </a>
